--- a/www/plugins/demo/workflow/models/queue/columns.yaml
+++ b/www/plugins/demo/workflow/models/queue/columns.yaml
@@ -8,7 +8,7 @@ columns:
     description:
         label: description
         type: text
-    item_type:
+    model:
         label: type
         type: text
     sort_order:
