--- a/www/plugins/demo/workflow/updates/version.yaml
+++ b/www/plugins/demo/workflow/updates/version.yaml
@@ -27,3 +27,6 @@
 1.0.10:
     - 'Created table demo_workflow_queue_pop_scripts'
     - builder_table_create_demo_workflow_queue_pop_scripts.php
+1.0.11:
+    - 'Created table demo_workflow_service_channels'
+    - builder_table_create_demo_workflow_service_channels.php
