--- a/www/plugins/demo/workflow/models/queue/fields.yaml
+++ b/www/plugins/demo/workflow/models/queue/fields.yaml
@@ -17,6 +17,10 @@ fields:
         span: auto
         type: switch
         comment: 'A virtual queue item won''t be associated in database'
+    service_channel:
+        label: Service Channel
+        span: auto
+        type: relation
     plugin:
         label: Plugin
         nameFrom: code
@@ -26,14 +30,6 @@ fields:
         type: relation
 tabs:
     fields:
-        item_type:
-            label: 'Item Type'
-            showSearch: true
-            span: auto
-            required: 1
-            type: dropdown
-            tab: Input
-            comment: 'Items which are qualified for queue.'
         redundancy_policy:
             label: 'Redundancy Policy'
             options:
@@ -52,11 +48,6 @@ tabs:
             span: auto
             hidden: 0
             type: codeeditor
-            tab: Input
-        event:
-            label: Event
-            span: auto
-            type: checkboxlist
             tab: Input
         sort_order:
             label: 'Sort Order'
