--- a/www/plugins/demo/workflow/models/queueitem/fields.yaml
+++ b/www/plugins/demo/workflow/models/queueitem/fields.yaml
@@ -6,12 +6,12 @@ fields:
         span: auto
         required: 1
         type: relation
-    item_type:
-        label: 'Item Type'
+    model:
+        label: 'Model'
         span: auto
         type: text
-    item_id:
-        label: 'Item Id'
+    record_id:
+        label: 'Record Id'
         span: auto
         type: text
     plugin:
