- Security bug fix - Condition builder fixed

--- a/www/plugins/demo/core/models/permission/fields.yaml
+++ b/www/plugins/demo/core/models/permission/fields.yaml
@@ -71,6 +71,8 @@ tabs:
             modelType: Demo\Core\Models\Webhook
             type: querybuilderwidget
             tab: Definition
+            dependsOn:
+                - model_ref
         policies:
             label: Policies
             mode: relation
