--- a/www/plugins/demo/core/models/formaction/fields.yaml
+++ b/www/plugins/demo/core/models/formaction/fields.yaml
@@ -76,3 +76,28 @@ tabs:
             required: 1
             type: text
             tab: Config
+        dom_attributes:
+            label: Attributes
+            prompt: 'Add new item'
+            span: auto
+            type: repeater
+            tab: Config
+            form:
+                fields:
+                    name:
+                        label: Name
+                        span: auto
+                        type: text
+                    value:
+                        label: Value
+                        span: auto
+                        type: text
+        context:
+            label: Context
+            options:
+                create: Create
+                update: Update
+                delete: Delete
+            span: auto
+            type: checkboxlist
+            tab: Config
