Action handling added

--- a/www/plugins/demo/core/models/auditlog/filter.yaml
+++ b/www/plugins/demo/core/models/auditlog/filter.yaml
@@ -6,19 +6,13 @@ scopes:
 
   record_id:
     label: Record Id
-    conditions: record_id = ':filtered'
-    type: number
-
-  model:
-    label: Version
-    conditions: version iLike '%:filtered%'
+    conditions: record_id = :value
     type: text
 
-  priority:
-    label: Priority
-    modelClass: Demo\CaseManager\Models\CasePriority
-    conditions: priority_id in (:filtered)
-    nameFrom: name
+  version:
+    label: Version
+    conditions: version = :value
+    type: text
 
   created_at:
     label: Created
