--- a/www/plugins/demo/core/models/formaction/fields.yaml
+++ b/www/plugins/demo/core/models/formaction/fields.yaml
@@ -55,7 +55,7 @@ tabs:
         script:
             label: Script
             size: large
-            language: php
+            language: javascript
             span: auto
             required: 1
             type: codeeditor
