--- a/www/plugins/demo/report/updates/version.yaml
+++ b/www/plugins/demo/report/updates/version.yaml
@@ -1,11 +1,8 @@
 1.0.1:
     - 'Initialize plugin.'
 1.0.2:
-    - 'Created table demo_report_reports'
-    - builder_table_create_demo_report_reports.php
+    - 'Created table demo_report_widgets'
+    - builder_table_create_demo_report_widgets.php
 1.0.3:
-    - 'Created table demo_report_libraries'
-    - builder_table_create_demo_report_libraries.php
-1.0.4:
     - 'Created table demo_report_dashboards'
     - builder_table_create_demo_report_dashboards.php
