--- a/www/plugins/demo/core/updates/version.yaml
+++ b/www/plugins/demo/core/updates/version.yaml
@@ -57,3 +57,6 @@
 1.0.20:
     - 'Created table demo_core_libraries'
     - builder_table_create_demo_core_libraries.php
+1.0.21:
+    - 'Created table demo_core_navigations'
+    - builder_table_create_demo_core_navigations.php
