Navigations implementation done

--- a/www/plugins/demo/core/models/coreuser/fields.yaml
+++ b/www/plugins/demo/core/models/coreuser/fields.yaml
@@ -44,9 +44,10 @@ tabs:
             span: auto
             type: relation
             tab: Roles
+            context:
+                - update
         groups:
             context:
-                - create
                 - update
             label: 'backend::lang.user.groups'
             commentAbove: 'backend::lang.user.groups_comment'
