--- a/www/plugins/demo/core/models/navigation/columns.yaml
+++ b/www/plugins/demo/core/models/navigation/columns.yaml
@@ -2,23 +2,8 @@ columns:
     id:
         label: id
         type: number
-    created_at:
-        label: created_at
-        type: datetime
-    updated_at:
-        label: updated_at
-        type: datetime
-    created_by_id:
-        label: created_by_id
-        type: number
-    updated_by_id:
-        label: updated_by_id
-        type: number
-    version:
-        label: version
-        type: number
-    title:
-        label: title
+    label:
+        label: label
         type: text
     type:
         label: type
@@ -38,3 +23,19 @@ columns:
     sort_order:
         label: sort_order
         type: text
+    created_at:
+        label: created_at
+        type: datetime
+    updated_at:
+        label: updated_at
+        type: datetime
+    created_by_id:
+        label: created_by_id
+        type: number
+    updated_by_id:
+        label: updated_by_id
+        type: number
+    version:
+        label: version
+        type: number
+
