--- a/www/plugins/demo/core/updates/version.yaml
+++ b/www/plugins/demo/core/updates/version.yaml
@@ -60,3 +60,6 @@
 1.0.21:
     - 'Created table demo_core_navigations'
     - builder_table_create_demo_core_navigations.php
+1.0.22:
+    - 'Created table demo_core_nav_role_associations'
+    - builder_table_create_demo_core_nav_role_associations.php
