--- a/www/plugins/demo/core/models/command/columns.yaml
+++ b/www/plugins/demo/core/models/command/columns.yaml
@@ -20,7 +20,7 @@ columns:
     description:
         label: description
         type: text
-    slug:
+    code:
         label: slug
         type: text
     active:
