--- a/www/plugins/demo/report/models/widget/fields.yaml
+++ b/www/plugins/demo/report/models/widget/fields.yaml
@@ -3,8 +3,8 @@ fields:
         label: Name
         span: auto
         type: text
-    slug:
-        label: Slug
+    code:
+        label: Code
         span: auto
         preset:
             field: name
