--- a/www/plugins/demo/core/models/iframe/columns.yaml
+++ b/www/plugins/demo/core/models/iframe/columns.yaml
@@ -17,7 +17,7 @@ columns:
     name:
         label: name
         type: text
-    slug:
+    code:
         label: slug
         type: text
     url:
