--- a/www/plugins/demo/core/controllers/navigationroleassociationcontroller/config_reorder.yaml
+++ b/www/plugins/demo/core/controllers/navigationroleassociationcontroller/config_reorder.yaml
@@ -1,4 +1,4 @@
-title: NavigationRoleAssociationController
-modelClass: Demo\Core\Models\NavigationRoleAssociation
+title: ViewRoleAssociationController
+modelClass: Demo\Core\Models\ViewRoleAssociation
 toolbar:
     buttons: reorder_toolbar
