--- a/www/composer.json
+++ b/www/composer.json
@@ -43,7 +43,8 @@
         "phpunit/phpunit": "^6.5",
         "maatwebsite/excel": "^3.1",
         "dompdf/dompdf": "^0.8.3",
-        "ext-json": "*"
+        "ext-json": "*",
+        "bvanhoekelen/performance": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.7",
