Added report and dashboard in the navigation

--- a/www/plugins/demo/core/models/command/columns.yaml
+++ b/www/plugins/demo/core/models/command/columns.yaml
@@ -21,7 +21,7 @@ columns:
         label: description
         type: text
     code:
-        label: slug
+        label: Code
         type: text
     active:
         label: active
