--- a/www/plugins/demo/core/updates/version.yaml
+++ b/www/plugins/demo/core/updates/version.yaml
@@ -63,3 +63,6 @@
 1.0.22:
     - 'Created table demo_core_view_role_associations'
     - builder_table_create_demo_core_view_role_associations.php
+1.0.23:
+    - 'Created table demo_core_ui_page'
+    - builder_table_create_demo_core_ui_page.php
