Fixed Workflow Navigation Added searchable property in tables

--- a/www/plugins/demo/casemanager/models/casemodel/columns.yaml
+++ b/www/plugins/demo/casemanager/models/casemodel/columns.yaml
@@ -5,6 +5,7 @@ columns:
     title:
         label: title
         type: text
+        searchable: true
     description:
         label: description
         type: text
