--- a/www/plugins/demo/core/models/eventhandler/columns.yaml
+++ b/www/plugins/demo/core/models/eventhandler/columns.yaml
@@ -20,6 +20,7 @@ columns:
         label: event
         type: text
     name:
+        searchable: true
         label: name
         type: text
     description:
