--- a/www/plugins/demo/core/models/inboundapi/columns.yaml
+++ b/www/plugins/demo/core/models/inboundapi/columns.yaml
@@ -21,6 +21,7 @@ columns:
         label: script
         type: text
     name:
+        searchable: true
         label: name
         type: text
     description:
