--- a/www/plugins/demo/core/models/javascriptlibrary/columns.yaml
+++ b/www/plugins/demo/core/models/javascriptlibrary/columns.yaml
@@ -18,6 +18,7 @@ columns:
         label: plugin_id
         type: number
     name:
+        searchable: true
         label: name
         type: text
     website:
