--- a/www/plugins/demo/core/models/modelassociation/columns.yaml
+++ b/www/plugins/demo/core/models/modelassociation/columns.yaml
@@ -27,6 +27,7 @@ columns:
         label: plugin_id
         type: number
     name:
+        searchable: true
         label: name
         type: text
     active:
