--- a/www/plugins/demo/core/models/permission/columns.yaml
+++ b/www/plugins/demo/core/models/permission/columns.yaml
@@ -3,9 +3,11 @@ columns:
         label: id
         type: number
     code:
+        searchable: true
         label: code
         type: text
     name:
+        searchable: true
         label: name
         type: text
     active:
