--- a/www/plugins/demo/casemanager/models/project/columns.yaml
+++ b/www/plugins/demo/casemanager/models/project/columns.yaml
@@ -9,6 +9,7 @@ columns:
         label: updated_at
         type: datetime
     name:
+        searchable: true
         label: name
         type: text
     description:
