--- a/www/plugins/demo/core/models/coreusergroup/columns.yaml
+++ b/www/plugins/demo/core/models/coreusergroup/columns.yaml
@@ -4,10 +4,12 @@
 
 columns:
     name:
+        searchable: true
         label: backend::lang.user.group.name_field
         searchable: true
 
     code:
+        searchable: true
         label: backend::lang.user.group.code_field
         searchable: true
         invisible: true
