--- a/www/plugins/demo/core/models/modelmodel/columns.yaml
+++ b/www/plugins/demo/core/models/modelmodel/columns.yaml
@@ -3,6 +3,7 @@ columns:
         label: id
         type: number
     name:
+        searchable: true
         label: name
         type: text
     model:
