--- a/www/plugins/demo/core/models/uipage/columns.yaml
+++ b/www/plugins/demo/core/models/uipage/columns.yaml
@@ -18,9 +18,11 @@ columns:
         label: version
         type: number
     name:
+        searchable: true
         label: name
         type: text
     code:
+        searchable: true
         label: code
         type: text
     plugin_id:
