Fixed Workflow Navigation Added searchable property in tables

--- a/www/plugins/demo/core/models/formaction/columns.yaml
+++ b/www/plugins/demo/core/models/formaction/columns.yaml
@@ -21,6 +21,7 @@ columns:
     label:
         label: label
         type: text
+        searchable: true
     active:
         label: active
         type: text
